[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typhoon-prover"
path = "src/bin/typhoon_prover.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
risc0-zkvm = { version = "1.2", default-features = false, features = ['std'] }
num-bigint = "0.4.6"
sha2 = "0.10.8"

[profile.release]
lto = "thin"
